# WAVMaker

WAVmultiHarmCreator/WAVmultiHarmCreator/: CMakeLists.txt  common.h  filereader.cpp  filereader.h  main.cpp  noise.cpp  noise.h  operations.cpp  operations.h  signal.cpp  signal.h  wavsaver.cpp  wavsaver.h
WAVmultiHarmCreator/build-WAVmultiHarmCreator-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: CMakeCache.txt  Makefile  WAVmultiHarmCreator.cbp  cmake_install.cmake  info.txt
task1/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.cff8148  common.h  main.cpp  noise.cpp  noise.h  operations.cpp  operations.h  signal.cpp  signal.h  wavsaver.cpp  wavsaver.h
